# evo_core_crypto_kyber

./: .gitignore  Cargo.toml  README.md
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: documentation.md  feature_request.md
benches/: bench_kyber.rs  bench_kyber_ake.rs  readme.md
examples/: example_ake.rs  example_kem.rs  example_uake.rs
fuzz/: readme.md
scripts/: 0_issue_create.sh  1_issue_start.sh  2_issue_commit.sh  3_issue_finish.sh  install.sh  issue_list.sh  run.sh  run_benches.sh  run_cargo_clean.sh  run_cargo_update.sh  run_check.sh  run_check_release_local.sh  run_dev.sh  run_documentation.sh  run_git_push.sh  run_tests.sh
scripts_release/: run_build_release_local.sh  run_create_github_repository.sh  run_github_release.sh
src/: api.rs  kem.rs  kex.rs  lib.rs  params.rs  symmetric.rs
src/reference/: mod.rs  poly.rs  polyvec.rs
tests/: readme.md  run_all_tests.sh  test_kat.rs  test_kem.rs  test_kex.rs
tests/KAT/: SHA256SUMS_ORIG  readme.md
tests/load/: mod.rs
tests/rand_bufs/: readme.md
